--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,36 +8,57 @@
     <title>Amey's blog</title>
 
     <style>
+        @import url('https://fonts.googleapis.com/css?family=Homemade+Apple|Indie+Flower|Raleway&display=swap');
+
         * {
             box-sizing: border-box;
-            margin: 0;
-            padding: 0;
         }
+
+        body {
+            font-family: 'Raleway';
+        }
+
+        .pageTitle {
+            text-align: center;
+            font-family: 'Homemade Apple', cursive;
+        }
+
         .post {
-            border : 2px solid #333;
-            border-radius : 4px;
+            /* border : 2px solid #333; */
+            border-radius: 4px;
             padding: 12px;
-            margin : 16px;
+            margin: 16px auto 16px auto;
+            background-color: lavenderblush;
+            max-width: 840px;
+
         }
+
+        .post .publishedDate {
+            font-size: 80%;
+        }
+
+        .post .title {
+            font-family: 'Indie Flower', cursive;
+            letter-spacing: 1px;
+        }
+
         a {
             /* color : inherit; */
-            text-decoration : none;
+            text-decoration: none;
         }
     </style>
 </head>
 
-<body>
+<body data-posts=”{{posts}}”>
 
-    <h1><a href='/'>Amey's blog</a></h1>
-
+    <h1 class='pageTitle'><a href='/'>Amey's blog</a></h1>
+    {% for post in posts %}
     <div class='post'>
-        <p>published: 14.06.2014, 12:14</p>
-        <h2><a href="">My first post</a></h2>
-        <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta
-            gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
-            massa justo sit amet risus.</p>
+        <p class='publishedDate'>published: {{ post.published_date }}</p>
+        <h1 class='title'><a href="" onload=''>{{post.title}}</a></h1>
+        <p class='text'>{{post.text|linebreaksbr}}</p>
     </div>
-
+    {% endfor %}
 
 </body>
 
