--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -43,19 +43,19 @@
         }
 
         a {
-            /* color : inherit; */
+            color : #4b167c;
             text-decoration: none;
         }
     </style>
 </head>
 
-<body data-posts=”{{posts}}”>
+<body>
 
     <h1 class='pageTitle'><a href='/'>Amey's blog</a></h1>
     {% for post in posts %}
     <div class='post'>
         <p class='publishedDate'>published: {{ post.published_date }}</p>
-        <h1 class='title'><a href="" onload=''>{{post.title}}</a></h1>
+        <h1 class='title'><a href="#">{{post.title}}</a></h1>
         <p class='text'>{{post.text|linebreaksbr}}</p>
     </div>
     {% endfor %}
