--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -15,7 +15,7 @@
         }
 
         body {
-            font-family: 'Raleway';
+            font-family: 'Raleway', serif;
         }
 
         .pageTitle {
