--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,12 +2,10 @@
 
 {% block content %}
 {% for post in posts %}
-    <div class="post">
-        <div class="date">
-            {{ post.published_date }}
-        </div>
-        <h2><a href="">{{ post.title }}</a></h2>
-        <p>{{ post.text|linebreaksbr }}</p>
+    <div class='post'>
+        <p class='publishedDate'>published:   {{ post.published_date }}.</p>
+        <h1 class='title'><a href="#">{{ post.title }}</a></h1>
+        <p class='text'>{{ post.text|linebreaksbr }}</p>
     </div>
 {% endfor %}
 {% endblock %}
