--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,7 +4,7 @@
 {% for post in posts %}
     <div class='post'>
         <p class='publishedDate'>published:   {{ post.published_date }}.</p>
-        <h1 class='title'><a href="#">{{ post.title }}</a></h1>
+        <h1 class='title'><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
         <p class='text'>{{ post.text|linebreaksbr }}</p>
     </div>
 
