--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,7 +5,7 @@
     <div class='post'>
         <p class='publishedDate'>published:   {{ post.published_date }}.</p>
         <h1 class='title'><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
-        <p class='text'>{{ post.text|linebreaksbr }}</p>
+        <p class='text'>{{ post.text|safe|linebreaksbr }}</p>
     </div>
 
 {% endfor %}
