--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -8,6 +8,8 @@
             </div>
 
         {% endif %}
+        <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}" title="Edit Post"><span class="fa fa-pencil"></span></a>
+
         <p class="index">Post #{{post.pk}}</p>
         <h2 class="title textCenter">{{ post.title }}</h2>
         <p class="text">{{ post.text|safe|linebreaksbr }}</p>
