--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,7 +10,10 @@
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
-      <div class="pageHeader"><a href="{% url 'post_new' %}" class="top-menu" title="New Post"><span class="fa fa-plus"></span></a>
+      <div class="pageHeader">
+        {% if user.is_authenticated %}
+        <a href="{% url 'post_new' %}" class="top-menu" title="New Post"><span class="fa fa-plus"></span></a>
+        {% endif %}
         <h1 class='pageTitle'><a href='/'>Amey's blog</a></h1>
       </div>
     <div class="content container">
